# aws-microvm-lab

./: .gitignore  PROJECT.md  README.md
common/proxy/: README.md  pyproject.toml
common/proxy/proxy/: auth.py  config.py  server.py  websocket.py
docs/: ARCHITECTURE.md  ROADMAP.md  TROUBLESHOOTING.md
scripts/: build.sh  run-step2.sh  run-step5.sh  run.sh
scripts/common/: build-microvm-image.sh  run-microvm.sh
scripts/config/: common.env  step10.env  step11.env  step12.env  step13.env  step14.env  step15.env  step18.env  step2.env  step3.env  step5.env  step6.env  step7.env  step8.env  step9.env
step1-hello/: Dockerfile  app.py  microvm-build-policy.json
step10-desktop-agent/: Dockerfile  configure-desktop-agent.py  desktop_controller.py  start-desktop-agent.sh
step11-desktop-tools/: Dockerfile  configure-desktop-tools.py  start-desktop-tools.sh
step12-desktop-executor/: Dockerfile  configure-desktop-executor.py
step13-desktop-agent-loop/: Dockerfile  start-desktop-executor.sh
step18-parrotos-desktop/: Dockerfile  hooks_server.py  start-parrotos-desktop.sh
step2-terminal/: Dockerfile
step3-novnc/: Dockerfile  microvm-build-policy.json  microvm-exec-trust.json
step4-gnome/: Dockerfile
step5-firefox/: Dockerfile  start-firefox.sh
step6-playwright/: Dockerfile  demo_playwright.py  start-playwright.sh
step7-desktop-automation/: Dockerfile  demo_desktop.py  start-desktop-automation.sh
step8-code-server/: Dockerfile  configure-code-server.py  start-code-server.sh
step9-claude-code/: Dockerfile  configure-claude-code.py  start-claude-code.sh
(+20 files in other folders)
