[project]
name = "microvm-proxy"
version = "0.1.0"
description = "Local HTTP/WebSocket proxy for AWS Lambda MicroVM endpoints"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.scripts]
microvm-proxy = "proxy.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]
